--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -242,6 +242,19 @@
 nav.navbar { width: 100vw;padding: 10px; position: fixed;background: #ffff;z-index: 100;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 0 10px 0;top: 0}
 .navbar-brand img{height: 50px;}
 main{ margin-top: 80px;}
+.category{
+  width: 100%; 
+  display: flex;
+}
+.category .category-image { 
+  width: 25%; 
+  transition: all .25s ease-in-out;
+}
+.category .category-content { 
+  width: 75%; 
+  transition: all .25s ease-in-out;
+}
+.category .category-content h3 { font-size: 18px; font-weight: 600; color: #000; display: block;}
 
 .side_bar { width: 270px;height: 100vh;padding: 30px;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px}
 .side-bar-logo {margin: 0 0 20px;}
