--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -255,6 +255,26 @@ main{ margin-top: 80px;}
   transition: all .25s ease-in-out;
 }
 .category .category-content h3 { font-size: 18px; font-weight: 600; color: #000; display: block;}
+.choice{
+  background-color: #6c757d;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 2px solid #000;
+  border-radius: 10px;
+  padding: 15px;
+}  
+.choice label.choice-label {
+  min-width: 40px;
+  width:100%;  height:100%;
+  border: 2px solid #FFF;
+
+}
+.choice .choice-check-group:has(input:checked) label.choice-label{
+  background:url(../images/tick.svg); 
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
 .side_bar { width: 270px;height: 100vh;padding: 30px;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px}
 .side-bar-logo {margin: 0 0 20px;}
