--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -274,7 +274,9 @@ main{ margin-top: 80px;}
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+.form label{
+  width: 100%;
+}
 
 .side_bar { width: 270px;height: 100vh;padding: 30px;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px}
 .side-bar-logo {margin: 0 0 20px;}
