--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -280,6 +280,13 @@ main{ margin-top: 80px;}
 .toast-container{
   z-index: 101;
 }
+table.dataTable img{
+  width: 40px;
+}
+table.dataTable tr td{
+  max-height: 50px;
+  overflow-y: hidden;
+}
 
 .side_bar { width: 270px;height: 100vh;padding: 30px;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px}
 .side-bar-logo {margin: 0 0 20px;}
