--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -868,6 +868,15 @@ border-radius: 7px;
   float:right;
 }
 
+.table-outer table tbody tr td p { 
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: calc(3 * 1.2em);
+  line-height: 1.2em; 
+}
 
 
 
