--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1020,6 +1020,62 @@ border-radius: 7px;
 .lesson-pdf-body canvas {
   border: 1px solid black;
 }
+section.post-section {
+  margin: 10px 0px;
+  width :100%;
+  padding:0
+}
+section.post-section .post-item{
+  width :100%;
+  padding:10px 15px;
+  margin: 10px 0px;
+  background-color:white;
+  border:1px solid #cfdeed;
+  border-radius:5px;
+}
+section.post-section .post-item .post-header{
+  display:flex;
+  flex-wrap:wrap;
+  width:100%;
+  justify-content:left;
+  align-items:center
+}
+section.post-section .post-item .post-header .avathar{
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  margin: 15px 5px;
+}
+section.post-section .post-item .post-header .title h3{
+  font-size: 16px;
+  font-weight: 500px;
+  color: #000;
+}
+section.post-section .post-item .post-header .title span{
+  font-size: 12px;
+  font-weight: 400px;
+  color: #919291;
+}
+section.post-section .post-item .post-actions {
+  width:100%;
+  display:flex;
+  justify-content:left;
+  align-items:center;
+}
+section.post-section .post-item .post-actions a.post-action-btn {
+  width:max-content;
+  display:flex;
+  justify-content:left;
+  align-items:center;
+}
+section.post-section .post-item .post-actions a.post-action-btn img{
+  width: 35px;
+  margin: 5px 5px;
+}
+section.post-section .post-item .post-actions a.post-action-btn span{
+  margin: 5px 5px;
+}
+
 
 
 
