--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1126,6 +1126,36 @@ section.post-section .post-item .post-actions a.post-action-btn span{
   font-size:18px;
   font-weight:500;
 }
+.dropzone {
+  width: 100%;
+  height: 200px;
+  margin: 10px 0px;
+  border: 2px dashed #ccc;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.dropzone.dragover {
+  background-color: #e0e0e0;
+}
+
+.dropzone p {
+  color: #666;
+}
+.selected-files {
+  margin: 15px 0px;
+}
+.selected-files span{
+  padding: 2px 6px;
+  border:1px solid #aaaaaa;
+  border-radius:5px
+}
 
 
 
