--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1203,12 +1203,16 @@ section.post-section .post-item .post-actions a.post-action-btn span{
   background-color:black
 }
 .progress-list .progress-item .progress-body {
-  width:100%; 
-  justify-content:center;
-  align-items:center;
+  width:100%;  
+  padding: 10px 5px;
+  background-color: gray;
+  border-radius: 50%;
+}
+.progress-list .progress-item .progress-body.complete {
+  background-color: orange;
 }
 .progress-list .progress-item .progress-body .progress-avathar {
-  width:50px; 
+  width:25px; 
   margin:auto
 }
 .progress-list .progress-item .progress-body .progress-title {
@@ -1217,16 +1221,19 @@ section.post-section .post-item .post-actions a.post-action-btn span{
   align-items:center;
   text-align:center; 
 }
-.progress-list .progress-item .progress-notification {
-  width:5px;
-  height:5px;
-  background:black;
+.progress-list .progress-item .progress-body.complete .progress-notification {
+  width:10px;
+  height:10px;
+  background-image:url(../images/tick-green.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
   display: block;
   margin-left: auto; 
-  margin-right: 0; 
-  border-radius:50%
+  margin-right: 0;  
 }
-
+ 
 
 
 
