--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1203,7 +1203,21 @@ section.post-section .post-item .post-actions a.post-action-btn span{
   background-color:black
 }
 
+.poll-graph-bar-wrapper {
+  position: relative;
+  height: 20px;
+  background: #f1f1f1;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-top: 5px;
+}
 
+.poll-graph-bar {
+  height: 100%;
+  background: #39a84f;
+  transition: width 0.5s ease;
+}
+ 
 
 .side_bar { width: 270px;height: 100vh;padding: 30px;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px}
 .side-bar-logo {margin: 0 0 20px;}
