--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1217,7 +1217,32 @@ section.post-section .post-item .post-actions a.post-action-btn span{
   background: #39a84f;
   transition: width 0.5s ease;
 }
- 
+.poll-options {
+  width:100%;
+}
+.poll-options .form-check {
+  width:100%;
+}
+.poll-options .form-check .form-check-input{
+  display:none
+}
+.poll-options .form-check .form-check-label{
+  width:100%;
+  height:80px;
+  border:1px solid #f1f1f1;
+  margin:10px 0px;
+  padding:10px 15px;
+  border-radius:15px
+}
+.poll-options .form-check:not(.vote,.voted) .form-check-label span{
+  display:none
+} 
+.poll-options .form-check.vote .form-check-label{
+  background-color:#f1f7fb    
+}
+.poll-options .form-check.voted .form-check-label{
+  background-color:#2196F3    
+}
 
 .side_bar { width: 270px;height: 100vh;padding: 30px;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px}
 .side-bar-logo {margin: 0 0 20px;}
