--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1268,6 +1268,12 @@ section.post-section .post-item .post-actions a.post-action-btn span{
   font-size:18px;
   font-weight:500;
 }
+section.post-section .post-container .post-item .post-title{   
+  font-size:16px;  
+  color:#212121;
+  font-weight:500;
+
+}
 section.post-section .post-container .post-item .post-content{    
   color:#212121;
   display: -webkit-box;
