--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1300,11 +1300,14 @@ section.post-section .post-container .post-item .post-content{
   border:1px solid #afafaf;
   padding: 10px 5px;
   margin: 10px 0;
-  float:left;
-  width:80%;
   border-radius:20px 5px 5px 0px;
   display:flex;
   flex-wrap:wrap
+}
+.post-comment .post-comment-item .post-comment-replys{
+  float:right;
+  width:80%;
+  padding: 10px 0;
 }
 .post-comment .post-comment-item .post-comment-text .comment-text {
   width:100%;
