--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1302,7 +1302,8 @@ section.post-section .post-container .post-item .post-content{
   margin: 10px 0;
   border-radius:20px 5px 5px 0px;
   display:flex;
-  flex-wrap:wrap
+  flex-wrap:wrap;
+  width:100%;
 }
 .post-comment .post-comment-item .post-comment-replys{
   float:right;
