--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1300,7 +1300,7 @@ section.post-section .post-container .post-item .post-content{
   border:1px solid #afafaf;
   padding: 10px 5px;
   margin: 10px 0;
-  border-radius:20px 5px 5px 0px;
+  border-radius:20px 20px 20px 0px;
   display:flex;
   flex-wrap:wrap;
   width:100%;
@@ -1316,6 +1316,28 @@ section.post-section .post-container .post-item .post-content{
   margin:5px 10px 15px 10px;
 }
 .post-comment .post-comment-item .post-comment-text .comment-avathar {
+  width:40px;
+  height:40px
+}
+.replay-list {
+  width:100%;
+  margin: 10px 0px;
+}
+.replay-list .replay-list-item {
+    border:1px solid #afafaf;
+    padding: 10px 15px;
+    margin: 10px 0;
+    border-radius:20px 20px 0px 20px;
+    display:flex;
+    flex-wrap:wrap;
+    width:100%;
+}
+.replay-list .replay-list-item .replay-text {
+  width:100%;
+  text-align:justify;
+  margin:5px 10px 15px 10px;
+}
+.replay-list .replay-list-item .replay-avathar {
   width:40px;
   height:40px
 }
